objects/Pro_User_Access_Form__c.object
<CustomObject>
    <description>Team Leads and L2s, please complete this form to change or add to Pros in FSL. A new form should be submitted for each pro.</description>
    <fields>
        <fullName>Approver_Email_Address__c</fullName>
        <label>Approver Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Comments_Note__c</fullName>
        <inlineHelpText>Please provide any additional information.</inlineHelpText>
        <label>Comments/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Sedona_Login_Name__c</fullName>
        <inlineHelpText>We MUST have the Dealernet ID upon completing this form and setting them up in Salesforce.</inlineHelpText>
        <label>Dealer/Sedona Login Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>Please provide date pro should be visible on the FSL scheduler.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Required when submitting a &quot;New&quot; Pro.  FSL will only accept email addressed ending in @A3Smarthome.com</inlineHelpText>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Needs_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checkmark will be populated if &quot;Other&quot; is selected in the &quot;Pro Shift&quot; field.</inlineHelpText>
        <label>Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Shift_Hours__c</fullName>
        <inlineHelpText>New shift hours must be approved prior to entering into Salesforce.</inlineHelpText>
        <label>New Shift Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_First_Name_User_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro First Name</label>
        <referenceTo>User_Access_Form__c</referenceTo>
        <relationshipLabel>Pro User Access Form (Pro First Name)</relationshipLabel>
        <relationshipName>Pro_User_Access_Form2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pro_First_Name__c</fullName>
        <label>Pro First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Full_Name__c</fullName>
        <formula>Pro_First_Name__c + &quot;&quot; + Pro_User_Access_Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Home_Address__c</fullName>
        <label>Pro Home Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Name__c</fullName>
        <formula>Pro_First_Name__c &amp;&quot; &quot;&amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Phone_Number__c</fullName>
        <label>Pro Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pro_Shift__c</fullName>
        <inlineHelpText>Service Territory &quot;MUST&quot; be filled out to view and select Pro Shift</inlineHelpText>
        <label>Pro Shift</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Territory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AZ - Monday, Tuesday, Wednesday, Saturday 7AM - 6PM MST</fullName>
                </value>
                <value>
                    <fullName>AZ - Monday - Friday (8am - 5 pm) - MST</fullName>
                </value>
                <value>
                    <fullName>AZ - Tuesday - Saturday 8AM - 4PM</fullName>
                </value>
                <value>
                    <fullName>AZ - Tuesday - Saturday 8AM - 4PM MST</fullName>
                </value>
                <value>
                    <fullName>AZ - Tuesday - Saturday 8AM - 5PM MST</fullName>
                </value>
                <value>
                    <fullName>AZ - Wednesday, Thursday, Friday, Saturday 8AM - 7PM MST</fullName>
                </value>
                <value>
                    <fullName>CA - Monday - Friday 8AM - 4:30 PM PST</fullName>
                </value>
                <value>
                    <fullName>CA - Monday - Friday 8AM - 5PM PST</fullName>
                </value>
                <value>
                    <fullName>CA - Tuesday - Saturday 8AM - 4:30PM PST</fullName>
                </value>
                <value>
                    <fullName>CA - Tuesday - Saturday 8AM - 4PM PST</fullName>
                </value>
                <value>
                    <fullName>CA - Tuesday - Saturday 8AM -  5PM PST</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>UT - Monday - Friday (8 am - 5:00 pm) MDT</fullName>
                </value>
                <value>
                    <fullName>NV - Monday - Friday (8 am - 4:30 pm) PDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Skill_Level__c</fullName>
        <inlineHelpText>Required when submitting a &quot;New&quot; Pro</inlineHelpText>
        <label>Pro Skill Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Installs</fullName>
                </value>
                <value>
                    <fullName>Level 1 - Installs &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Installs</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Installs &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Installs</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Installs &amp; Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_User_Access_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro User Access Form</label>
        <referenceTo>Pro_User_Access_Form__c</referenceTo>
        <relationshipName>Pro_User_Access_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pro_User_First_Name__c</fullName>
        <formula>User_Access_Form__r.User_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro User First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_User_Name_User_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pro_User_Access_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Status of Pro User Access Request</description>
        <inlineHelpText>If updating an existing Pro, please indicate what was updated in the comments field below.</inlineHelpText>
        <label>Request Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update Existing Pro</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Entered_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Entered in SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the approver of this request.</inlineHelpText>
        <label>Select Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pro_User_Access_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <description>Required when submitting</description>
        <inlineHelpText>Required when submitting &quot;New&quot; users.</inlineHelpText>
        <label>Service Territory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>UT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Times_Available__c</fullName>
        <label>Times Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extend Shift 2 Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Access_Form_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Access Form</label>
        <referenceTo>User_Access_Form__c</referenceTo>
        <relationshipLabel>Pro User Access Form (User Access Form)</relationshipLabel>
        <relationshipName>Pro_User_Access_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Access_Form__c</fullName>
        <label>User Access Form</label>
        <referenceTo>User_Access_Form__c</referenceTo>
        <relationshipLabel>Pro User Access Form</relationshipLabel>
        <relationshipName>Pro_User_Access_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pro User Access</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>Pro_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Pro_Phone_Number__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Comments_Note__c</columns>
        <columns>User_Access_Form__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resource_Entered_in_SFDC__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Products_Added__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pro Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pro User Access Form</pluralLabel>
    <recordTypes>
        <fullName>Overtime_Request_Form</fullName>
        <active>true</active>
        <label>Overtime Request Form</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_Shift_Hoursv2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL( Pro_Shift__c , &quot;Other&quot;), 
 ISBLANK(  New_Shift_Hours__c )
)</errorConditionFormula>
        <errorDisplayField>New_Shift_Hours__c</errorDisplayField>
        <errorMessage>Please enter the new shift hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Existing_Pro_Add_Comments</fullName>
        <active>false</active>
        <description>AND(
  ISPICKVAL(Request_Type__c, &quot;Update Existing Pro&quot;), 
 ISBLANK( Comments_Note__c ),
NOT ( ISCHANGED(Comments_Note__c) )
)</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Request_Type__c, &quot;Update Existing Pro&quot;), 
 ISBLANK( Comments_Note__c )
)</errorConditionFormula>
        <errorDisplayField>Comments_Note__c</errorDisplayField>
        <errorMessage>Please enter the changes that were made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Existing_Pro_Clear_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Request_Type__c, &quot;Update Existing Pro&quot;), 
NOT ( ISCHANGED(Comments_Note__c) )
)</errorConditionFormula>
        <errorDisplayField>Comments_Note__c</errorDisplayField>
        <errorMessage>Please enter the changes that were made.</errorMessage>
    </validationRules>
</CustomObject>